--- a/PomProject/pom.xml
+++ b/PomProject/pom.xml
@@ -29,4 +29,16 @@
     <version>7.4.0</version>
     <scope>test</scope>
 </dependency></dependencies>
+ <build> 
+	  <plugins> 
+		  <plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>exec-maven-plugin</artifactId>
+<version>3.1.0</version>
+<configuration>
+<mainClass>hello.HelloWorld</mainClass>
+</configuration>
+</plugin>
+	  </plugins>
+  </build>
 </project>
